[package]
name = "rust-blogpost-auth-async"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.3.3"
# actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
# chrono = { version = "0.4.10", features = ["serde"] }
# derive_more = "0.99.2"]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
postgres = "*"
# dotenv = "0.15.0"
# futures = "0.3.1"
# r2d2 = "0.8.8"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
# actix-service = "1.0.1"
# alcoholic_jwt = "1.0.0"
# reqwest = "0.9.22"
# actix-rt = "1.0.0"